Prevent action trigger options from getting cut off https://github.com/Strategy11/formidable/issues/1455

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -1203,7 +1203,7 @@ select.frm_cancelnew, input.frm_enternew{width:175px;}
     padding: 0;
 }
 .frm_email_settings .widget:last-of-type{
-	margin-bottom:60px;
+	margin-bottom:20px;
 }
 
 .frm_actions_list a{
@@ -1216,6 +1216,16 @@ select.frm_cancelnew, input.frm_enternew{width:175px;}
 .frm_actions_list a:active, .frm_actions_list a:focus{
     outline: none;
 }
+
+.frm_form_action_settings,
+.frm_form_action_settings .btn-group.frm-btn-group.open{
+	position: static;
+}
+
+.frm_form_action_settings .widget-top{
+	position: relative;
+}
+
 .frm_form_action_settings .widget-inside{
 	min-height:25px;
 }
